[package]
name = "test_gl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xplm = { git = "https://github.com/benrussell/rust-xplm.git", branch="unstable", version="0.3.3" }
xplm-sys = { git="https://github.com/benrussell/xplm-sys.git", version="0.4.1" }


[lib]
crate-type = ["cdylib"]
# bench = false


[build-dependencies]
gl_generator = "0.14.0"

